# free-splatter.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/workflows/: ci.yml
bench/: free_splatter-bench.cpp
bindings/go/: example_purego_test.go
docker/: Dockerfile.cuda
fuzz/: README.md  fuzz_decode.cpp  fuzz_image.cpp  fuzz_options.cpp  fuzz_pose.cpp
include/: free_splatter.h
pose/: README.md  _upstream.py  accumulate.py  align.py  check_cv2_parity.py  check_upstream_parity.py  empirical.py  find_loop.py  focal.py  fuse.py  loop_closure.py  pnp.py  re10k_control.py  re10k_crossrun.py  re10k_experiment.py  re10k_fetch.py  render_ply.py  test_pose.py  tt_control.py  tt_experiment.py
scripts/: activate_gaussians.py  bench.sh  bench_torch.py  compare_taps.py  convert.py  gen_synthetic_gguf.py  hf_dump.py  make_accumulate_demo.sh  make_demo.sh  make_scenes.sh  parallax_ref.py  preprocess_scene.py  requirements.txt  serve.sh  setup_bgremove.sh  to_splat.py
scripts/demo/: bake-vids.sh  bake.sh  make.sh  render.js
scripts/hf/: MODEL_CARD.md  upload.py
server/: README.md  bg.go  convert.go  demo.go  engine.go  go.mod  main.go  scenes.go
server/web/: accumulate.html  demo.html  index.html  reconstruct.html
src/: backend.cpp  backend.h  free_splatter.cpp  gguf_loader.cpp  gguf_loader.h  image.cpp  image.h  linalg.h  model.cpp  model.h  options.h  pose.cpp  pose.h  splat.h  wasm_glue.cpp
tests/: CMakeLists.txt  test_graph_blocks.cpp  test_image.cpp  test_loader.cpp  test_parity.cpp  test_pose.cpp
tools/: free_splatter-cli.cpp  stb_impl.cpp
web/: README.md  accumulate.html  build-wasm.sh  index.html  scenes.json
